--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "digitickets/omnipay-gocardlessv2",
+  "name": "bennetgallein/omnipay-gocardlessv2",
   "type": "library",
   "description": "GoCardless gateway for Omnipay payment processing library, using the v2 GoCardless API",
   "keywords": [
@@ -11,12 +11,12 @@
     "gocardless",
     "purchase"
   ],
-  "homepage": "https://github.com/digitickets/omnipay-gocardlessv2",
+  "homepage": "https://github.com/bennetgallein/omnipay-gocardlessv2",
   "license": "MIT",
   "authors": [
     {
       "name": "Digitickets Contributors",
-      "homepage": "https://github.com/digitickets/omnipay-gocardlessv2/contributors"
+      "homepage": "https://github.com/bennetgallein/omnipay-gocardlessv2/contributors"
     },
     {
       "name": "Kayla Daniels",
@@ -45,19 +45,25 @@
     }
   },
   "require": {
-    "omnipay/common": "~2.0",
-    "gocardless/gocardless-pro": "^1",
-    "php": "^5.5|^7",
-    "symfony/event-dispatcher": "^2.8"
+    "omnipay/common": "^3.3",
+    "gocardless/gocardless-pro": "^6",
+    "php": "^7|^8",
+    "symfony/event-dispatcher": "^7",
+    "php-http/guzzle7-adapter": "^1.1"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "^2.0",
-    "omnipay/tests": "~2.0",
-    "satooshi/php-coveralls": "^1.0"
+    "omnipay/tests": "^4.0",
+    "php-coveralls/php-coveralls": "^1.0",
+    "http-interop/http-factory-guzzle": "^1.2"
   },
   "scripts": {
     "run-sa": "vendor/bin/phpstan analyse --ansi --no-progress -c phpstan.neon -l 4 src tests",
     "run-fixer": "vendor/bin/php-cs-fixer fix",
     "run-tests": "vendor/bin/phpunit"
+  },
+  "config": {
+    "allow-plugins": {
+      "php-http/discovery": true
+    }
   }
 }
